@@ -15,7 +15,7 @@ GENERIC_FILES = $(GENERIC_MP_REL_FILES)
 if HAS_MP
 BSP_MP_O_FILES = shmsupp
 endif
-BSP_FILES = start tty $(BSP_MP_O_FILES)
+BSP_FILES = startup tty $(BSP_MP_O_FILES)
 
 include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
 include $(top_srcdir)/../../../../../../automake/compile.am
